# ukis-h3cellstore

./: .gitignore  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  clippy.toml  docker-build-for-gzs-python-base.sh  justfile  tutorial.ipynb
argo/: README.md
argo/images/bamboo-ci-builder/: Dockerfile
argo/images/h3cellstore-builder/: Dockerfile
argo/workflowtemplates/: ci.yaml
arrow_h3/: Cargo.toml
arrow_h3/src/: compact.rs  error.rs  frame.rs  lib.rs
arrow_h3/src/algo/: compact.rs  split.rs
bamboo_h3/: Cargo.toml  MANIFEST.in  README.md  USER-DOCUMENTATION.md  example_dump_df.py  example_polygon_io.py  example_processor.py  install-dev-dependencies.py  pyproject.toml
bamboo_h3/bamboo_h3/: __init__.py  columnset.py  concurrent.py  container.py  geo.py  postgres.py  schema.py  testdata.py  util.py
bamboo_h3/bamboo_h3/clickhouse/: __init__.py
bamboo_h3/src/: clickhouse.rs  columnset.rs  convert.rs  env.rs  error.rs  from_py.rs  geo.rs  inspect.rs  lib.rs  pywrap.rs  schema.rs  syncapi.rs  window.rs
bamboo_h3/tests/: __init__.py  fixtures.py  test_columnset.py  test_concurrent.py  test_connection.py  test_datetime.py  test_save_aggregations.py  test_schema.py
bamboo_h3/tests/data/: fork-polygon.geometry.geojson
bamboo_h3_core/: Cargo.toml
bamboo_h3_core/benches/: columnset.rs
bamboo_h3_core/src/: columnset.rs  common.rs  error.rs
bamboo_h3_core/src/clickhouse/: compacted_tables.rs  mod.rs  query.rs  walk.rs  window.rs
bamboo_h3_core/src/clickhouse/schema/: compacted_tables.rs  mod.rs
bamboo_h3_int/: Cargo.toml
bamboo_h3_int/benches/: columnset.rs
bamboo_h3_int/src/: algorithm.rs  columnset.rs  colvec.rs  common.rs  compacted_tables.rs  error.rs  fileio.rs  iter.rs  lib.rs  schema.rs
bamboo_h3_int/src/clickhouse/: compacted_tables.rs  mod.rs  query.rs  schema.rs  window.rs
bamboo_h3_int/src/clickhouse/schema/: compacted_tables.rs  mod.rs
clickhouse_arrow_grpc/: Cargo.toml  README.md
clickhouse_arrow_grpc/clickhouse-server/: config.xml
clickhouse_arrow_grpc/examples/: helloworld.rs
clickhouse_arrow_grpc/proto/: README.md
clickhouse_arrow_grpc/src/: arrow_integration.rs  lib.rs
crates/arrow_h3/: Cargo.toml  README.md
crates/arrow_h3/src/: error.rs  export.rs  frame.rs  lib.rs  series.rs
crates/arrow_h3/src/algo/: area.rs  centroid.rs  compact.rs  iter.rs  mod.rs  resolution.rs  split.rs  tests.rs
crates/bamboo_h3/: MANIFEST.in  USER-DOCUMENTATION.md  example_polygon_io.py  example_processor.py  pyproject.toml
crates/bamboo_h3/bamboo_h3/: __init__.py  raster.py  vector.py
crates/bamboo_h3/src/: clickhouse.rs  columnset.rs  geo.rs  (+5 more)
crates/clickhouse_arrow_grpc/: Cargo.toml  README.md  build.rs
crates/clickhouse_arrow_grpc/examples/: helloworld.rs
crates/clickhouse_arrow_grpc/src/: arrow_integration.rs  error.rs  export.rs  lib.rs
crates/h3cellstore/: Cargo.toml  README.md
crates/h3cellstore/examples/: basic.rs
crates/h3cellstore/src/: error.rs  export.rs  frame.rs  lib.rs
crates/h3cellstore/src/clickhouse/: cellstore.rs  mod.rs  sync.rs
crates/h3cellstore/src/clickhouse/compacted_tables/: insert.rs  inserter.rs  mod.rs  optimize.rs  select.rs  tableset.rs  temporary_key.rs  traversal.rs
crates/h3cellstore/src/clickhouse/compacted_tables/schema/: agg.rs  column.rs  datatype.rs  mod.rs  other.rs  partitioning.rs  temporal.rs
crates/h3cellstore/src/geom/: border_cells.rs  mod.rs
crates/h3cellstorepy/: API.md  Cargo.toml  README.md  install-dev-dependencies.py  justfile  make-api-doc.sh  pyproject.toml
crates/h3cellstorepy/h3cellstorepy/: __init__.py  clickhouse.py  frame.py  geom.py
crates/h3cellstorepy/src/: error.rs  frame.rs  lib.rs  utils.rs
crates/h3cellstorepy/src/arrow_interop/: mod.rs  to_py.rs  to_rust.rs
crates/h3cellstorepy/src/clickhouse/: grpc.rs  mod.rs  schema.rs  tableset.rs  traversal.rs
crates/h3cellstorepy/src/geom/: mod.rs
crates/h3cellstorepy/testdata/: S2B_MSIL1C_20181011T101019_N0206_R022_T32TPT_20181011T122059_WATER.tif
crates/h3cellstorepy/tests/: fixtures.py
crates/h3cellstorepy/tests/clickhouse/: __init__.py  test_connection.py  test_geom.py  test_raster.py  test_schema.py  test_traversal.py
crates/ukis_clickhouse_arrow_grpc/: Cargo.toml
crates/ukis_clickhouse_arrow_grpc/examples/: helloworld.rs
crates/ukis_clickhouse_arrow_grpc/src/: arrow_integration.rs  lib.rs
crates/ukis_h3cellstore/: Cargo.toml  README.md
crates/ukis_h3cellstorepy/: API.md  Cargo.toml  README.md  install-dev-dependencies.py  justfile  pyproject.toml
crates/ukis_h3cellstorepy/src/: error.rs  frame.rs  lib.rs  utils.rs
crates/ukis_h3cellstorepy/src/arrow_interop/: to_py.rs  to_rust.rs
crates/ukis_h3cellstorepy/src/clickhouse/: grpc.rs  schema.rs  tableset.rs  traversal.rs
crates/ukis_h3cellstorepy/src/geom/: mod.rs
crates/ukis_h3cellstorepy/tests/: fixtures.py
crates/ukis_h3cellstorepy/tests/clickhouse/: __init__.py  test_connection.py  test_geom.py  test_raster.py  test_schema.py  test_traversal.py
crates/ukis_h3cellstorepy/ukis_h3cellstorepy/: __init__.py  clickhouse.py  frame.py  geom.py
h3cellstore/: Cargo.toml
h3cellstore/examples/: basic.rs
h3cellstore/src/: error.rs  lib.rs
h3cellstore/src/clickhouse/: cellstore.rs  compacted_tables.rs  mod.rs  tableset.rs
h3cellstore/src/clickhouse/compacted_tables/: inserter.rs  mod.rs  optimize.rs
h3cellstore/src/clickhouse/compacted_tables/schema/: agg.rs  column.rs  datatype.rs  mod.rs  other.rs
h3cpy/: Cargo.toml  README.md  example_polygon_io.py  example_processor.py  example_sliding_window.py  requirements.dev.txt
h3cpy/h3cpy/: __init__.py  concurrent.py  geometry.py  postgres.py
h3cpy/src/: clickhouse.rs  connection.rs  geometry.rs  inspect.rs  lib.rs  pywrap.rs  syncapi.rs  window.rs
h3cpy_int/: Cargo.toml
h3cpy_int/src/: algorithm.rs  colvec.rs  compacted_tables.rs  error.rs  lib.rs  window.rs
h3cpy_int/src/clickhouse/: colvec.rs  mod.rs  query.rs
tutorial/: .tutorial.md.swp  tutorial.ipynb  tutorial.md
tutorial/.ipynb_checkpoints/: tutorial-checkpoint.ipynb
(+35 files in other folders)
