[package]
name = "bamboo_h3"
version = "0.8.0"
edition = "2018"
authors = [
    "Nico Mandery <nico.mandery@dlr.de>"
]

[lib]
name = "bamboo_h3"
crate-type = ["cdylib"]

[dependencies]
bamboo_h3_core = { path = "../bamboo_h3_core" }
numpy = "^0.13"
wkb = "=0.7.0" # 0.7.1 upgrades geo-types from 0.6.0 to 0.7.0
h3ron = "0.10.0"
h3ron-h3-sys = "0.10.0"
svgbobdoc = "^0.2"
either = "^1.6"
serde = "^1"
itertools = "^0.10"
tracing = "0.1"
tracing-futures = "0.2"
regex = "^1.4"
lazy_static = "^1.4"


[dependencies.tracing-subscriber]
version = "0.2"
features = ["json"]

[dependencies.chrono]
version = "0.4"

[dependencies.chrono-tz]
version = "0.5"


[dependencies.geojson]
version = "^0.21"
features = [
    "geo-types"
]

[dependencies.pyo3]
version = "^0.13"
features = [
    "extension-module",
    "abi3",
    # minimum python version this library supports
    # as this library depends on pandas>=1.2 we are using the
    # same minimum python version as pandas.
    # https://pypi.org/project/pandas/1.2.3/
    "abi3-py37"
]

[dependencies.tokio]
version = "^1"
default-features = false
features = [
    "io-util",
    "time",
    "net",
    "sync",
    "rt-multi-thread",
    "macros",
]

[package.metadata.maturin]
# the h3 dependencies are incomplete. As the extension is distributed as source only,
# the additional packages `scikit-build` and `cython` may be required for the build. The later
# may be needed as the included c-sources may be generated for an older python version. In case
# of weird comppiler errors just try to install cython.
requires-dist = [
    "numpy",
    "pandas>=1.2",
    "geojson>=2.5",
    "h3>=3.7",
    "shapely>=1.7",
    "h3ronpy>=0.10",
    "geopandas>=0.8",
    "rasterio>=1.1",
    "pytz>=2021.1"
]
