[package]
name = "bamboo_h3"
version = "0.8.1"
edition = "2021"
authors = [
    "Nico Mandery <nico.mandery@dlr.de>"
]

[lib]
name = "bamboo_h3"
crate-type = ["cdylib"]

[dependencies]
bamboo_h3_core = { path = "../bamboo_h3_core" }
numpy = "0.16"
wkb = "=0.7.1"
h3ron = "0.14"
h3ron-h3-sys = "0.13"
either = "^1.6"
serde = "^1"
itertools = "^0.10"
tracing = "0.1"
tracing-futures = "0.2"
regex = "^1"
lazy_static = "^1.4"


[dependencies.tracing-subscriber]
version = "0.3"
features = ["json", "env-filter"]

[dependencies.chrono]
version = "0.4"

[dependencies.chrono-tz]
version = "0.5"


[dependencies.geojson]
version = "^0.22"
features = [
    "geo-types"
]

[dependencies.pyo3]
version = "^0.16"
features = [
    "extension-module",
    "multiple-pymethods",
    "abi3",
    # minimum python version this library supports
    # as this library depends on pandas>=1.2 we are using the
    # same minimum python version as pandas.
    # https://pypi.org/project/pandas/1.2.3/
    "abi3-py37"
]

[dependencies.tokio]
version = "^1"
default-features = false
features = [
    "io-util",
    "time",
    "net",
    "sync",
    "rt-multi-thread",
    "macros",
]

[package.metadata.maturin]
# the h3 dependencies are incomplete. As the extension is distributed as source only,
# the additional packages `scikit-build` and `cython` may be required for the build. The later
# may be needed as the included c-sources may be generated for an older python version. In case
# of weird comppiler errors just try to install cython.
requires-dist = [
    "numpy",
    "pandas>=1.2",
    "geojson>=2.5",
    "h3>=3.7",
    "shapely>=1.7",
    "h3ronpy>=0.10",
    "geopandas>=0.8",
    "rasterio>=1.1",
    "pytz>=2021.1",
    "loguru>=0.5"
]
