[package]
name = "bamboo_h3_core"
version = "0.8.0"
authors = ["Nico Mandery <nico.mandery@dlr.de>"]
edition = "2018"
description = "Internal code of bamboo_h3"

[dependencies]
regex = "^1"
lazy_static = "^1.4"
geo-types = "^0.7"
geo = "^0.18"
ndarray = "0.15"
itertools = "0.10"
h3ron = "0.12"
h3ron-h3-sys = "0.12"
serde_json = "^1"
ordered-float = "^2"
rayon = "^1.5"
url = "^2"
fnv = "^1"
async-channel = "1.6"
tracing = "0.1"
tracing-futures = "0.2"

[dependencies.tokio]
version = "^1"
default-features = false
features = [
    "io-util",
    "time",
    "sync",
    "macros",
]

[dependencies.chrono]
version = "0.4"

[dependencies.chrono-tz]
version = "0.5"

[dependencies.clickhouse-rs]
version = "1.0.0-alpha.1"

[dependencies.futures-util]
version = "^0.3"
features = ["sink"]

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dependencies.uuid]
version = "^0.8"
features = [
    "v4"
]

[dev-dependencies.criterion]
version = "^0.3"
features = [
    "html_reports"
]

[[bench]]
name = "columnset"
harness = false
