[package]
name = "h3cpy"
version = "0.5.4"
edition = "2018"
authors = [
    "Nico Mandery <nico.mandery@dlr.de>"
]

[lib]
name = "h3cpy"
crate-type = ["cdylib"]

[dependencies]
h3cpy_int = { path = "../h3cpy_int" }
numpy = "0.12"
geo-types = "^0.6"
geo = "^0.16"
itertools = "0.10"
log = "0.4"
env_logger = "0.8"
wkb = "0.7"
h3ron = "0.7.1"
h3ron-h3-sys = "0.7.1"

[dependencies.geojson]
version = "^0.21"
features = [
    "geo-types"
]

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]

[dependencies.tokio]
version = "0.2.21"
default-features = false
features = [
    "io-util",
    "time",
    "net",
    "sync",
    #"rt-threaded"
]

[package.metadata.maturin]
requires-dist = [
    "numpy",
    "pandas>=1.2",
    "geojson>=2.5",
    "h3>=3.7",
    "shapely>=1.7",
]