[package]
name = "h3cpy"
version = "0.6.0"
edition = "2018"
authors = [
    "Nico Mandery <nico.mandery@dlr.de>"
]

[lib]
name = "h3cpy"
crate-type = ["cdylib"]

[dependencies]
h3cpy_int = { path = "../h3cpy_int" }
numpy = "^0.13"
log = "0.4"
env_logger = "0.8"
wkb = "0.7"
h3ron = "0.7.1"
h3ron-h3-sys = "0.7.1"

[dependencies.geojson]
version = "^0.21"
features = [
    "geo-types"
]

[dependencies.pyo3]
version = "^0.13"
features = [
    "extension-module",
    "abi3",

    # minimum python version this library supports
    # as this library depends on pandas>=1.2 we are using the
    # same minimum python version as pandas.
    # https://pypi.org/project/pandas/1.2.3/
    "abi3-py37"
]

[dependencies.tokio]
version = "^1"
default-features = false
features = [
    "io-util",
    "time",
    "net",
    "sync",
    "rt-multi-thread"
]

[package.metadata.maturin]
requires-dist = [
    "numpy",
    "pandas>=1.2",
    "geojson>=2.5",
    "h3>=3.7",
    "shapely>=1.7",
]