[package]
name = "h3cpy_int"
version = "0.3.2"
authors = ["Nico Mandery <nico.mandery@dlr.de>"]
edition = "2018"
description = "Internal code of h3cpy"

[dependencies]
regex = "^1.4"
lazy_static = "1.4.0"
geo-types = "^0.6"
geo = "^0.16"
ndarray = ">=0.13"
itertools = "0.10"
log = "0.4"
chrono = "0.4"
chrono-tz = "0.5"

[dependencies.h3ron]
#git = "https://github.com/nmandery/h3ron.git"
#tag = "v0.4.1"
version = "0.7.0"

[dependencies.h3ron-h3-sys]
#git = "https://github.com/nmandery/h3ron.git"
#tag = "v0.4.1"
version = "0.7.0"

[dependencies.clickhouse-rs]
git = "https://github.com/suharev7/clickhouse-rs.git"
rev = "d288a4f8a" # to include https://github.com/suharev7/clickhouse-rs/pull/102

[dependencies.futures-util]
version = "0.3.5"
features = ["sink"]

#[dependencies.tokio]
#version = "0.2.0"
#default-features = false
#features = ["io-util", "time", "net", "sync", "rt-threaded"]