[package]
name = "arrow_h3"
version = "0.1.0"
edition = "2021"
description = "H3-related algorithms on dataframes containing H3 cells"
authors = [
    "Nico Mandery <nico.mandery@dlr.de>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde", "polars/serde", "polars/serde-lazy", "h3ron/use-serde"]
simd = ["polars-core/simd", "polars/simd"]

# activate to re-export depdendencies
export = []

[dependencies]
thiserror = "1"
itertools = "0.10"

[dependencies.tracing]
version = "0.1"

[dependencies.h3ron]
git = "https://github.com/nmandery/h3ron.git"
rev = "90db233174997d8483982f5255dfff597642c2f1"
features = ["use-rayon"]

[dependencies.polars]
version = "0.21"
features = ["dtype-full", "lazy", "list"]

[dependencies.polars-core]
version = "0.21"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true
