[package]
name = "arrow_h3"
version = "0.3.0"
edition = "2021"
description = "H3-related algorithms on dataframes containing H3 cells"
authors = [
    "Nico Mandery <nico.mandery@dlr.de>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde", "polars/serde", "polars/serde-lazy", "h3ron/use-serde"]
simd = ["polars-core/simd", "polars/simd"]

# activate to re-export depdendencies
export = []

[dependencies]
thiserror = "1"
itertools = "0.10"
geo-types = "0.7"

[dependencies.tracing]
version = "0.1"

[dependencies.h3ron]
git = "https://github.com/nmandery/h3ron.git"
rev = "13ea3b5310ae6ed83df437d86e640aa6d73dd181"
features = ["use-rayon"]

[dependencies.polars]
version = "0.23"
features = ["dtype-full", "lazy", "list", "timezones"]

[dependencies.polars-core]
version = "0.23"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true
