[package]
name = "clickhouse_arrow_grpc"
version = "0.3.0"
edition = "2021"
description = "GRPC-based interface library for ClickHouse using Arrow-IPC as data exchange format"
authors = [
    "Nico Mandery <nico.mandery@dlr.de>"
]


[features]
simd = ["polars/simd", "polars-core/simd", "arrow2/simd"]
tls = ["tonic/tls"]

[dependencies]
prost = "0.11"
thiserror = "1"
async-trait = "0.1"
chrono = "0.4"

[dependencies.tracing]
version = "0.1"

[dependencies.arrow2]
version = "0.14"
features = [
    "io_ipc"
]

[dependencies.polars]
version = "0.24"
features = ["dtype-full", "timezones"]

[dependencies.polars-core]
version = "0.24"

[dependencies.tonic]
version = "0.8"
features = ["gzip"]

[dependencies.tokio]
version = "1.12"
#features = [
#    "rt-multi-thread",
#    "macros",
#    "sync"
#]

[build-dependencies]
tonic-build = { version = "0.8", features = [] }

[[example]]
name = "helloworld"


[dev-dependencies]
chrono = "0.4"
eyre = "0.6"
tracing-subscriber = "0.3"

[dev-dependencies.tokio]
version = "1.12"
features = [
    "rt-multi-thread",
    "macros",
    "sync"
]
