[package]
name = "h3cellstore"
version = "0.11.2"
edition = "2021"
description = "High-level rust crate to store H3 cells in ClickHouse databases"
authors = [
    "Nico Mandery <nico.mandery@dlr.de>"
]

[features]
serde_arrow = ["use_serde"]
simd = ["clickhouse_arrow_grpc/simd"]
tls = ["clickhouse_arrow_grpc/tls"]
use_serde = ["dep:serde"]  # rust 1.60: calling this feature just 'serde' does not lead to inclusion of the serde crate when activated


[dependencies]
async-trait = "0.1"
chrono = "0.4"
clickhouse_arrow_grpc = { path = "../clickhouse_arrow_grpc" }
futures = "0.3"
geo-types = "0.7"
h3ron = { git = "https://github.com/nmandery/h3ron.git", rev = "cfd132c" }
h3ron-polars = { git = "https://github.com/nmandery/h3ron.git", rev = "cfd132c" }
itertools = "0.10"
once_cell = "1"
polars = { version = "0.24", features = ["dtype-full", "lazy", "list", "timezones"] }
postage = "0.5"
rand = "0.8"
regex = "1.5"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"
tokio = "1"
tracing = "0.1"


[dev-dependencies]
eyre = "0.6"
geo-types = "0.7"
serde_json = "1"
tokio = { version = "1.12", features = [ "rt-multi-thread", "macros", "sync" ] }
tracing-subscriber = "0.3"

[[example]]
name = "basic"
