[package]
name = "h3cellstorepy"
version = "0.10.1"
edition = "2021"
description = "High-level Python library to store H3 cells in ClickHouse databases"
authors = [
    "Nico Mandery <nico.mandery@dlr.de>"
]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "h3cellstorepy"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
regex = "1.5.5"
once_cell = "1"
numpy = "0.16"
futures = "0.3"

[dependencies.py_geo_interface]
version = "0.3"
features = [
    "f64",
    "wkb"
]

[dependencies.tracing-subscriber]
version = "0.3"
features = [
    #"json",
    "env-filter",
]

[dependencies.tracing]
version = "0.1"

[dependencies.h3cellstore]
path = "../h3cellstore"
features = [
    "export",
    "tls",
    "use_serde"
]

[dependencies.pyo3]
version = "^0.16"
features = [
    "macros",
    "multiple-pymethods",
    "abi3",
    # minimum python version this library supports
    "abi3-py38"
]


[dependencies.tokio]
version = "^1"
default-features = false
features = [
    "io-util",
    "time",
    "net",
    "sync",
    "rt-multi-thread",
    "macros",
]


[package.metadata.maturin]
requires-dist = [
    "h3>=3.7.4",
    "geojson",
    "numpy",
    "pyarrow>=7.0.0"
]
