[package]
name = "ukis_clickhouse_arrow_grpc"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "GRPC-based interface library for ClickHouse using Arrow-IPC as data exchange format"
authors = [
    "Nico Mandery <nico.mandery@dlr.de>"
]


[features]
# simd = ["polars/simd", "polars-core/simd", "arrow2/simd"]
tls = ["tonic/tls"]

[dependencies]
arrow2 = { version = "0.14", features = ["io_ipc"] }
async-trait = "0.1"
chrono = "0.4"
polars-core = "0.25"
polars = { version = "0.25", features = ["timezones", "dtype-u8", "dtype-date", "dtype-datetime"] }
prost = "0.11"
thiserror = "1"
tokio = "1"
tonic = { version = "0.8", features = ["gzip"] }
tracing = "0.1"

[build-dependencies]
tonic-build = { version = "0.8", features = [] }

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
chrono = "0.4"
tokio = { version = "1.12", features = ["rt-multi-thread", "macros", "sync"] }
tracing-subscriber = "0.3"

[[example]]
name = "helloworld"

