[package]
name = "ukis_h3cellstorepy"
version = "0.12.3"
license = "Apache-2.0"
edition = "2021"
description = "High-level Python library to store H3 cells in ClickHouse databases"
authors = [
    "Nico Mandery <nico.mandery@dlr.de>"
]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[lib]
name = "ukis_h3cellstorepy"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
geo-types = "0.7"
ukis_h3cellstore = { path = "../ukis_h3cellstore", features = [ "tls", "use_serde", "border_cells" ] }
numpy = "0.19"
once_cell = "1"
polars-core = "0.29"
py_geo_interface = { version = "0.6", features = [ "f64", "wkb" ] }
pyo3 = { version = "^0.19", features = [ "macros", "multiple-pymethods", "abi3", "abi3-py38" ] }
regex = "1.5.5"
serde_json = "1"
tokio = { version = "^1", default-features = false, features = [ "io-util", "time", "net", "sync", "rt-multi-thread", "macros", ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter", ] }

