[build-system]
requires = [
    "maturin==1.1",
    "patchelf>=0.17",
    "pytest==7.1",
    "polars", # unittests
    "pandas",  # unittests
    "geopandas",  # unittests
    "geojson",  # unittests
    "h3ronpy",  # unittests
    "rasterio", # unittests
    "sphinx-markdown-builder"  # for building docs
]
build-backend = "maturin"


[tool.pytest.ini_options]
minversion = "7.1"
addopts = "--doctest-modules"
testpaths = [
    "ukis_h3cellstorepy",
    "tests"
]

[project]
name = "ukis_h3cellstorepy"
license = {text = "Apache-2.0"}
description = "High-level Python library to store H3 cells in ClickHouse databases"
dependencies = [
    "h3>=3.7.4",
    "geojson",
    "numpy",
    "pyarrow>=7.0.0"
]
